--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  /* background: var(--background);
+  color: var(--foreground); */
   font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
